<resources>
    <string name="app_name">Automated Intrusion Detection</string>
    <string name="title_activity_live_stream">Live Stream</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_pi_ip">IP</string>
    <string name="pref_title_pi_port">Port</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_key_pi_ip">ipKey</string>
    <string name="pref_key_pi_port">portKey</string>
    <string name="pref_key_password">passwordKey</string>
    <string name="pref_key_username">usernameKey</string>
    <string name="title_activity_main">Automated Intrusion Detection</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="library">Gallery</string>
    <string name="camera">Camera</string>
    <string name="start_camera">Turn Camera On</string>
    <string name="stop_camera">Turn Camera Off</string>
    <string name="take_picture">Take Picture</string>
    <string name="settings">Settings</string>
    <string name="date_taken">Date taken</string>
    <string name="Share">Share</string>
    <string name="home">Home</string>
    <string name="default_description">This picture was captured with the Automated Intrusion Detection app</string>
    <string name="error_general">An unknown error occured</string>
    <string name="success_image_saved">Image saved to Gallery</string>
    <string name="error_login_credentials">Username or Password incorrect</string>
    <string name="error_internet_connection">Phone not connected to the internet</string>
    <string name="error_time_out">Connection timed out. Check your ip and port settings.</string>
    <string name="annotation_camera_off">CAMERA OFF</string>
    <string name="annotation_no_entries">NO ENTRIES FOUND</string>
    <string name="title_activity_settings2">Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="error_doc_not_found">Security event not found</string>
    <string name="error_img_not_found">Image not found</string>

</resources>
