<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="@string/pref_key_pi_ip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_pi_ip" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="22"
        android:inputType="number"
        android:key="@string/pref_key_pi_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_pi_port" />
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="@string/pref_key_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_username" />
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textPassword"
        android:key="@string/pref_key_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="*******"
        android:title="@string/pref_title_password" />
</PreferenceScreen>