<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        style="@style/Header"/>

    <WebView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        style="@style/Object"/>

    <Button
        android:id="@+id/button_start_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_camera"
        style="@style/Button"/>

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:enabled="false"
        style="@style/Button"/>

</LinearLayout>